--- a/popup.html
+++ b/popup.html
@@ -34,6 +34,8 @@
         </div>
     </div>
     
+    <a href="https://github.com/Albert-Lsk/iflow-mcp-helper" target="_blank" class="github-link">GitHub</a>
+    
     <script src="script.js"></script>
 </body>
 </html>
