--- a/popup.html
+++ b/popup.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iflow MCP 助手 (PowerShell 专用)</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="popup_style.css">
 </head>
 <body>
     <div class="container">
-        <h1>iflow MCP 助手 (PowerShell 专用)</h1>
+        <h1>iflow MCP 助手</h1>
         
         <div class="input-section">
             <label for="inputCommand">粘贴原始命令:</label>
@@ -18,7 +18,7 @@
         <div class="output-section">
             <div class="output-item">
                 <div class="output-header">
-                    <label for="outputSingleQuote">PowerShell (单引号版):</label>
+                    <label for="outputSingleQuote">单引号版:</label>
                     <button id="copySingleQuote" class="copy-button">复制</button>
                 </div>
                 <textarea id="outputSingleQuote" readonly></textarea>
@@ -26,7 +26,7 @@
             
             <div class="output-item">
                 <div class="output-header">
-                    <label for="outputBacktick">PowerShell (双引号版):</label>
+                    <label for="outputBacktick">双引号版:</label>
                     <button id="copyBacktick" class="copy-button">复制</button>
                 </div>
                 <textarea id="outputBacktick" readonly></textarea>
